--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,70 @@
-pool:
-  name: 'rollout'
-
-stages:
-- stage: Deploy
-  jobs:
-  - job: DeployMongoDB
-    displayName: 'Deploy MongoDB to Kubernetes Namespace three-tier'
-    steps:
-    - task: Kubernetes@1
-      inputs:
-        connectionType: 'Kubernetes Service Connection'
-        #azureSubscription: 'k8sconnection'
-        kubernetesServiceEndpoint: 'k8sconnection'
-        azureResourceGroup: 'dev-env'
-        kubernetesCluster: 'dev-cluster'
-        namespace: 'three-tier'
-        command: 'apply'
-        arguments: '-f DB/database.yml'
-      displayName: 'Deploy MongoDB to Kubernetes'
+apiVersion: v1
+kind: Secret
+metadata: 
+  namespace: three-tier
+  name: db-secret
+type: Opaque
+data:  
+  password: cGFzc3dvcmQxMjM=
+  username: YWRtaW4=
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata: 
+  namespace: three-tier
+  name: mongodb
+spec: 
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mongodb
+  template:
+    metadata:
+      labels: 
+        app: mongodb
+    spec: 
+      containers:
+      - name: mongo-cont
+        image: mongo:4.4.6
+        command:
+            - "numactl"
+            - "--interleave=all"
+            - "mongod"
+            - "--wiredTigerCacheSizeGB"
+            - "0.1"
+            - "--bind_ip"
+            - "0.0.0.0"
+        ports:
+        - containerPort: 27017
+        env: 
+          - name: MONGO_INITDB_ROOT_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: db-secret
+                key: username
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: db-secret
+                key: password
+        volumeMounts:
+        - name: mongo-data
+          mountPath: /data/db
+      volumes:
+      - name: mongo-data
+        hostPath:
+          path: /db
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: three-tier
+  name: mongodb-svc
+spec:
+  selector:
+    app: mongodb
+  ports:
+  - name: mongodb-svc
+    protocol: TCP
+    port: 27017
+    targetPort: 27017
