Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 pool:
-  name: 'rollout'
+  name: 'devpool'
 
 stages:
 - stage: Deploy
@@ -10,9 +10,9 @@ stages:
     - task: Kubernetes@1
       inputs:
         connectionType: 'Kubernetes Service Connection'
-        #azureSubscription: 'k8sconnection'
-        kubernetesServiceEndpoint: 'k8sconnection'
-        azureResourceGroup: 'dev-env'
+        #azureSubscription: 'k8 connection'
+        kubernetesServiceEndpoint: 'k8 connection'
+        azureResourceGroup: 'devtest'
         kubernetesCluster: 'dev-cluster'
         namespace: 'three-tier'
         command: 'apply'
