--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ stages:
         connectionType: 'Kubernetes Service Connection'
         #azureSubscription: 'k8s connection'
         kubernetesServiceEndpoint: 'k8s connection'
-        azureResourceGroup: 'dev'
+        azureResourceGroup: 'test'
         kubernetesCluster: 'dev-cluster'
         namespace: 'three-tier'
         command: 'apply'
